update index page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Push notifications</h1>
         <p class="col-md-8 fs-4">Page links to push notifications feature</p>
-        <button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button>
+        <a href="https://sandboxfeatures.github.io/pushnotification/index.html"><button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button></a>
         </div>
     </div>
 
@@ -70,7 +70,7 @@
         <div class="h-100 p-5 text-white bg-dark rounded-3">
           <h2>Web tracking</h2>
           <p>Page links to goals feature</p>
-          <button class="btn btn-primary position-relative" type="button">Try it</a><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">coming soon</span></button>
+          <button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">coming soon</span></button>
         </div>
       </div>
       <div class="col-md-6">
