--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -71,7 +71,14 @@
 <script src="https://cdn.by.wonderpush.com/sdk/1.1/wonderpush-loader.min.js" async></script>
 <script>
 
+if(params.has('userId')) {
+    var userId = params.get('userId');
+  }
+
+
+  
 window.WonderPush = window.WonderPush || [];
+WonderPush.push(['setUserId',userId]);
 WonderPush.push(["init", {
   webKey: "6a3c1997365959cafce443995b647bae3fd60e43ab352688542d63230e028c82",
 }]);
