--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Push notifications</h1>
         <p class="col-md-8 fs-4">Page links to push notifications feature</p>
-        <a href="https://sandboxfeatures.github.io/pushnotification/index.html"><button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button></a>
+        <a href="https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX"><button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button></a>
         </div>
     </div>
 
