--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -52,18 +52,74 @@
 <main>
   <div class="container py-4">
     <header class="pb-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+      <a href="https://www.sandboxfeatures.github.io" class="d-flex align-items-center text-dark text-decoration-none">
         <svg xmlns="https://www3.actito.com/actito-portal/images/logo.svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-        <span class="fs-4">Website to test features</span>
+        <span class="fs-4">Push notifications feature</span>
       </a>
     </header>
-
     </div>
 
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Hello world</h1>
+
+    <div class="container px-4 py-5" id="icon-grid">
+      
+      <h2 class="pb-2 border-bottom">Setup</h2>
+
+      <div class="col d-flex align-items-start">
+        <div>
+          <p>Becarful, this setup is not the real setup that our client have to deploy. It's a quick setup to play with the feaure.</p>
         </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+
+        
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">1. Create your profile on the database</h4>
+            <p>In to the profile table "A*****PushNotification", create your profile with your email address.</p>
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">2. Set the userId</h4>
+            <p>Go back to this page. In the url parameter "userId", replace "XXXXXX" with your email address.</p>
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">3. Click on the ring bell</h4>
+            <p>Check the state of you subscription. We must be unsubscribe.</p>
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">4. Delete the cache of your browser</h4>
+            <p>It's just a precaution.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">5. Reload the web page and subscribe</h4>
+            <p>After reloading the page, the pop-in to subscribe to push notification appears</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">6. Now, you can sent push</h4>
+            <p>From the push notification platform or from the scenario.</p>
+          </div>
+        </div>
+      </div>
     </div>
 
 
