--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX"><button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button></a>
         </div>
     </div>
-
+    <div>
       <div class="col-md-6">
         <div class="h-100 p-5 text-white bg-dark rounded-3">
           <h2>Web tracking</h2>
