--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="product team">
     
-    <title>Sandbox</title>
+    <title>Sandbox add-ons</title>
     
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/jumbotron/">
@@ -124,7 +124,7 @@
 
 
     <footer class="pt-3 mt-4 text-muted border-top">
-      &copy; 2022
+      &copy; Sandbox - add-ons - 2022
     </footer>
   </div>
 </main>
