--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -83,17 +83,9 @@
         </div>
 
         <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">2. Set the userId</h4>
-            <p>Go back to this page. In the url parameter "userId", replace "XXXXXX" with your email address.</p>
-          </div>
-        </div>
-
-        <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">3. Click on the ring bell</h4>
+            <h4 class="fw-bold mb-0">2. Click on the ring bell</h4>
             <p>Check the state of you subscription. We must be unsubscribe.</p>
           </div>
         </div>
@@ -101,15 +93,31 @@
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">4. Delete the cache of your browser</h4>
+            <h4 class="fw-bold mb-0">3. Delete the cache of your browser</h4>
             <p>It's just a precaution.</p>
           </div>
         </div>
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">4. Set the userId</h4>
+            <p>Go back to this page. In the url parameter "userId", replace "XXXXXX" with your email address.</p>
+          </div>
+        </div>
+
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">5. Reload the web page and subscribe</h4>
             <p>After reloading the page, the pop-in to subscribe to push notification appears</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">6. Do you receive a welcom push ?</h4>
+            <p>Yes if, you are now subscribed to receive push notificaztion</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
