--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -66,7 +66,7 @@
 
       <div class="col d-flex align-items-start">
         <div>
-          <p>Becarful, this setup is not the real setup that our client have to deploy. It's a quick setup to play with the feaure.</p>
+          <p>Becarful, this setup is not the real setup that clients have to deploy. It's a quick setup to play with the feaure.</p>
         </div>
       </div>
 
