--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -66,35 +66,33 @@
 
       <div class="col d-flex align-items-start">
         <div>
-          <p>Becarful, this setup is not the real setup that clients have to deploy. It's a quick setup to play with the feaure.</p>
+          <p>Becarful, it's a quick setup to play with the feaure. It's not the real setup that clients have to deploy. </p>
         </div>
       </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
 
-        
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">1. Click on the ring bell on left side</h4>
+            <p>Check the state of your subscription. If you are unsubscribe, click to subsribe. If you are using Chrome, we can be automaticaly subscribed according the setting of you browser</p>
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">2. Do you receive a welcom push ?</h4>
+            <p>Yes if, you are now subscribed to receive push notificaztion</p>
+          </div>
+        </div>
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">1. Create your profile on the database</h4>
+            <h4 class="fw-bold mb-0">3. Create your profile on the database</h4>
             <p>In to the profile table "A*****PushNotification", create your profile with your email address.</p>
-          </div>
-        </div>
-
-        <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">2. Click on the ring bell</h4>
-            <p>Check the state of you subscription. We must be unsubscribe.</p>
-          </div>
-        </div>
-
-        <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">3. Delete the cache of your browser</h4>
-            <p>It's just a precaution.</p>
           </div>
         </div>
 
@@ -102,28 +100,14 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">4. Set the userId</h4>
-            <p>Go back to this page. In the url parameter "userId", replace "XXXXXX" with your email address.</p>
+            <p>Go to https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX after replace "XXXXXX" of parameter "userId" with your email address. The couple of browser and device will be link to you email address.</p>
           </div>
         </div>
 
         <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">5. Reload the web page and subscribe</h4>
-            <p>After reloading the page, the pop-in to subscribe to push notification appears</p>
-          </div>
-        </div>
-        <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">6. Do you receive a welcom push ?</h4>
-            <p>Yes if, you are now subscribed to receive push notificaztion</p>
-          </div>
-        </div>
-        <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">6. Now, you can sent push</h4>
+            <h4 class="fw-bold mb-0">5. Now, you can sent push</h4>
             <p>From the push notification platform or from the scenario.</p>
           </div>
         </div>
