--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -81,17 +81,9 @@
         </div>
 
         <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">2. Do you receive a welcom push ?</h4>
-            <p>Yes if, you are now subscribed to receive push notificaztion</p>
-          </div>
-        </div>
-
-        <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">3. Create your profile on the database</h4>
+            <h4 class="fw-bold mb-0">2. Create your profile on the database</h4>
             <p>In to the profile table "A*****PushNotification", create your profile with your email address.</p>
           </div>
         </div>
@@ -99,8 +91,8 @@
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">4. Set the userId</h4>
-            <p>Go to https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX after replace "XXXXXX" of parameter "userId" with your email address. The couple of browser and device will be link to you email address.</p>
+            <h4 class="fw-bold mb-0">3. Set the userId</h4>
+            <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and reload the page<br/>. The couple of browser and device will be link to you email address.</p>
           </div>
         </div>
 
