--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -92,7 +92,7 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">3. Set the userId</h4>
-            <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and reload the page<br/>. The couple of browser and device will be link to you email address.</p>
+            <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and tap "enter" to reload the page<br/>. The couple of browser and device will be link to you email address.</p>
           </div>
         </div>
 
