--- a/pushnotification/index.html
+++ b/pushnotification/index.html
@@ -76,7 +76,7 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">1. Click on the ring bell on left side</h4>
-            <p>Check the state of your subscription. If you are unsubscribe, click to subsribe. If you are using Chrome, we can be automaticaly subscribed according the setting of you browser</p>
+            <p>Check the state of your subscription. If you are unsubscribe, click to subsribe. If you are using Chrome, we can be automaticaly subscribed according the setting of your browser</p>
           </div>
         </div>
 
