--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <footer class="pt-3 mt-4 text-muted border-top">
-      &copy; Sandbox - add-ons - 2022
+      &copy; Sandbox - optional modules - 2023
     </footer>
   </div>
 </main>
