--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -54,7 +54,7 @@
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
         <svg xmlns="https://www3.actito.com/actito-portal/images/logo.svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-        <span class="fs-4">Push notifications</span>
+        <span class="fs-4">Customer signals</span>
       </a>
     </header>
   
@@ -70,39 +70,43 @@
         </div>
       </div>
 
+      <div class="col d-flex align-items-start">
+        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
+        <div>
+          <h4 class="fw-bold mb-0">1. Set the userId</h4>
+          <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and tap "enter" to reload the page<br/>. The couple of browser and device will be link to you email address.</p>
+        </div>
+      </div>
+
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">1. Click on the ring bell on left side</h4>
-            <p>Check the state of your subscription. If you are unsubscribe, click to subsribe. If you are using Chrome, we can be automaticaly subscribed according the setting of your browser</p>
+            <h4 class="fw-bold mb-0">2. Simulate a product page view</h4>
+            <p>XXXXXX</p>
           </div>
         </div>
 
-        <div class="col d-flex align-items-start">
-          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
-          <div>
-            <h4 class="fw-bold mb-0">2. Set the userId</h4>
-            <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and tap "enter" to reload the page<br/>. The couple of browser and device will be link to you email address.</p>
-          </div>
-        </div>
+
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">3. Create your profile on the database</h4>
-            <p>In to the profile table "A*****PushNotification", create your profile with your email address.</p>
+            <h4 class="fw-bold mb-0">3. Simulate an abandoned basket</h4>
+            <p>XXXXXX</p>
           </div>
         </div>
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">4. Now, you can sent push</h4>
-            <p>From the push notification platform or from the scenario.</p>
+            <h4 class="fw-bold mb-0">4. Simulate a purchase</h4>
+            <p>XXXXXXXXXX</p>
           </div>
         </div>
+
+
       </div>
     </div>
 
