--- a/customersignals/products-page.html
+++ b/customersignals/products-page.html
@@ -62,11 +62,11 @@
 
     <div class="container px-4 py-5" id="icon-grid">
       
-      <h2 class="pb-2 border-bottom">Setup</h2>
+      <h2 class="pb-2 border-bottom">Instruction</h2>
 
       <div class="col d-flex align-items-start">
         <div>
-          <p>Becarful, it's a quick setup to play with the feaure. It's not the real setup that clients have to deploy.</p>
+          <p>Click on calls to action to "simulate" a product view.</p>
         </div>
       </div>
 
