--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -66,7 +66,7 @@
 
       <div class="col d-flex align-items-start">
         <div>
-          <p>Becarful, it's a quick setup to play with the feaure. It's not the real setup that clients have to deploy. </p>
+          <p>Becarful, it's a quick setup to play with the feature. It's not the real setup that clients have to deploy. </p>
         </div>
       </div>
 
