--- a/customersignals/products-page.html
+++ b/customersignals/products-page.html
@@ -63,7 +63,7 @@
     <div class="container px-4 py-5" id="icon-grid">
       
       <h2 class="pb-2 border-bottom">Instruction</h2>
-
+      <a href="/checkout-page.html" class="btn btn-primary">Go to basket</a>
       <div class="col d-flex align-items-start">
         <div>
           <p>Click on calls to action to "simulate" a product view.</p>
