script-raptor-index

--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -45,9 +45,17 @@
       }
     </style>
 
+<script type="text/javascript">
+  window.raptor||(window.raptor={q:[{event:"trackevent",params:{p1:"pageview"}}],push:function(event,params,options){this.q.push({event:event,params:params,options:options})},customerId:"15919"});
+</script>
     
   </head>
   <body>
+
+
+<script type="text/javascript">
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src="//az19942.vo.msecnd.net/script/raptor-3.0.min.js",g.async="true",s.parentNode.insertBefore(g,s)}(document,"script"));
+      </script>
     
 <main>
   <div class="container py-4">
@@ -116,6 +124,11 @@
     </footer>
   </div>
 </main>
+
+<script>
+  raptor.push("setRuid","259588709d6499ddf93b47e88c93962672398c0db2325e86942ec28bb99267a8");
+  raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
+</script>
 
   </body>
 </html>
