--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -126,7 +126,16 @@
 </main>
 
 <script>
-  raptor.push("setRuid","259588709d6499ddf93b47e88c93962672398c0db2325e86942ec28bb99267a8");
+
+  var url = window.location.href;
+  var params = new URLSearchParams(document.location.search); 
+
+  if(params.has('userId')) {
+  var userId = params.get('userId');
+  var userIdHashed= crypto.subtle.digest("SHA-256", userId);
+  }
+
+  raptor.push("setRuid",userIdHashed);
   raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
 </script>
 
