--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -129,15 +129,21 @@
 
   var url = window.location.href;
   var params = new URLSearchParams(document.location.search); 
-
-  if(params.has('userId')) {
-  var userId = params.get('userId');
-  var userIdHashed= crypto.subtle.digest("SHA-256", userId);
-  raptor.push("setRuid",userIdHashed);
+ 
+  async function digestUserId(str) {
+    const hash = await crypto.subtle.digest("SHA-256", new TextEncoder("utf-8").encode(str));
+    return Array.prototype.map.call(new Uint8Array(hash), x=>(('00'+x.toString(16)).slice(-2))).join('');
   }
 
+  if(params.has('userId')) {
+    var userId = params.get('userId');
+    const hashUserId = digestUserId(userId);
+    raptor.push("setRuid",hashUserId);
+}
   
-  raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
+
+  
+//raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
 </script>
 
   </body>
