--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -132,13 +132,15 @@
  
   async function digestUserId(str) {
     const hash = await crypto.subtle.digest("SHA-256", new TextEncoder("utf-8").encode(str));
-    return Array.prototype.map.call(new Uint8Array(hash), x=>(('00'+x.toString(16)).slice(-2))).join('');
+    var hashUserId = Array.prototype.map.call(new Uint8Array(hash), x=>(('00'+x.toString(16)).slice(-2))).join('');
+    console.log(hashUserId);
+    //raptor.push("setRuid",hashUserId);
   }
 
   if(params.has('userId')) {
     var userId = params.get('userId');
-    const hashUserId = digestUserId(userId);
-    raptor.push("setRuid",hashUserId);
+    digestUserId(userId);   
+    
 }
   
 
