--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -142,10 +142,8 @@
     digestUserId(userId);   
     
 }
-  
 
-  
-//raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
+  raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
 </script>
 
   </body>
