--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -134,17 +134,17 @@
     const hash = await crypto.subtle.digest("SHA-256", new TextEncoder("utf-8").encode(str));
     var hashUserId = Array.prototype.map.call(new Uint8Array(hash), x=>(('00'+x.toString(16)).slice(-2))).join('');
     console.log(hashUserId);
-    //raptor.push("setRuid",hashUserId);
+    raptor.push("setRuid",hashUserId);
   }
 
   if(params.has('userId')) {
-    var userId = params.get('userId');
-    digestUserId(userId);    
-  }
-  else (params.has('emailAddressSHA256')) {
-    var hashUserId = params.get('emailAddressSHA256');
-    raptor.push("setRuid",hashUserId);
-  }
+  var userId = params.get('userId');
+  digestUserId(userId);
+  raptor.push("setRuid",hashUserId);
+} else if (params.has('emailAddressSHA256')) {
+  var userId = params.get('emailAddressSHA256');
+  raptor.push("setRuid",userId);
+}
 
   raptor.push("trackEvent", {p1:"visit", p2:"1234", p3:"ProductnameHere"});
 </script>
