--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -51,6 +51,10 @@
     
   </head>
   <body>
+
+<script type="text/javascript">
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src="//az19942.vo.msecnd.net/script/raptor-3.0.min.js",g.async="true",s.parentNode.insertBefore(g,s)}(document,"script"));
+      </script>
     
 <main>
   <div class="container py-4">
