--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -155,7 +155,7 @@ if(params.has('userId')) {
 }  
     
 
-
+//when the user click on the button
 function triggerAbandonedBasket(basketId) {
   var basketId = Date.now();
   console.log(basketId); 
