--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -73,7 +73,7 @@
 
       <div class="col d-flex align-items-start">
         <div>
-          <p>Becarful, it's a quick setup to play with the feaure. It's not the real setup that clients have to deploy.</p>
+          <p>Click on call to action to "simulate" an abandoned card.</p>
         </div>
       </div>
 
