--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -69,7 +69,7 @@
 
     <div class="container px-4 py-5" id="icon-grid">
       
-      <h2 class="pb-2 border-bottom">instruction</h2>
+      <h2 class="pb-2 border-bottom">Instruction</h2>
 
       <div class="col d-flex align-items-start">
         <div>
