--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -78,21 +78,23 @@
         </div>
       </div>
 
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
-        <div>
-          <h4 class="fw-bold mb-0">1. Set the userId</h4>
-          <p>Look the url on this page, replace "XXXXXX" of parameter "userId" with your email address and tap "enter" to reload the page<br/>. The couple of browser and device will be link to you email address.</p>
-        </div>
-      </div>
+
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
+          <div>
+            <h4 class="fw-bold mb-0">1. Track your session </h4>
+            <p>To link your anonymous session with your identified profile, add the parameter "?userId=YOUR_EMAIL" and tap "enter" to reload the page<br/>. Now, all sessions will be link to your identified profile until you delete your cookie.</p>
+          </div>
+        </div>
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">2. Simulate a product page view</h4>
-            <p>XXXXXX</p>
+            <button><a href="https://sandboxfeatures.github.io/customersignals/products-page">Go</a></button>
           </div>
         </div>
 
@@ -102,7 +104,7 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">3. Simulate an abandoned basket</h4>
-            <p>XXXXXX</p>
+            <button><a href="https://sandboxfeatures.github.io/customersignals/checkout-page">Go</a></button>
           </div>
         </div>
 
@@ -110,7 +112,7 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">4. Simulate a purchase</h4>
-            <p>XXXXXXXXXX</p>
+            <button><a href="https://sandboxfeatures.github.io/customersignals/payment-confirmation-page">Go</a></button>
           </div>
         </div>
 
