--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -86,7 +86,7 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">1. Track your session </h4>
-            <p>To link your anonymous session with your identified profile, add the parameter "?userId=YOUR_EMAIL" and tap "enter" to reload the page<br/>. Now, all sessions will be link to your identified profile until you delete your cookie.</p>
+            <p>To link your session with your profile, add the parameter "?userId=YOUR_EMAIL" and tap "enter" to reload the page<br/>. Now, all your sessions will be link to your profile until you delete your cookie.</p>
           </div>
         </div>
 
@@ -94,7 +94,8 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">2. Simulate a product page view</h4>
-            <button><a href="https://sandboxfeatures.github.io/customersignals/products-page">Go</a></button>
+            <br/>
+            <a href="https://sandboxfeatures.github.io/customersignals/products-page"><button class="btn btn-primary" >Simulate</button></a>
           </div>
         </div>
 
@@ -104,15 +105,17 @@
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
           <div>
             <h4 class="fw-bold mb-0">3. Simulate an abandoned basket</h4>
-            <button><a href="https://sandboxfeatures.github.io/customersignals/checkout-page">Go</a></button>
+            <br/>
+            <a href="https://sandboxfeatures.github.io/customersignals/checkout-page""><button class="btn btn-primary" >Simulate</button></a>
           </div>
         </div>
 
         <div class="col d-flex align-items-start">
           <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
           <div>
-            <h4 class="fw-bold mb-0">4. Simulate a purchase</h4>
-            <button><a href="https://sandboxfeatures.github.io/customersignals/payment-confirmation-page">Go</a></button>
+            <h4 class="fw-bold mb-0">4. Simulate a purchase confirmation</h4>
+            <br/>
+            <a href="https://sandboxfeatures.github.io/customersignals/payment-confirmation-page"><button class="btn btn-primary" >Simulate</button></a>
           </div>
         </div>
 
