--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -148,9 +148,9 @@ async function digestUserId(str) {
 if(params.has('userId')) {
   var userId = params.get('userId');
   digestUserId(userId);
-  raptor.push("setRuid",hashUserId);
-} else if (params.has('emailAddressSHA256')) {
-  var userId = params.get('emailAddressSHA256');
+  raptor.push("setRuid",userId);
+} else if (params.has('emailAddress')) {
+  var userId = params.get('emailAddress');
   raptor.push("setRuid",userId);
 }  
     
