--- a/ecommerce/payment.html
+++ b/ecommerce/payment.html
@@ -47,8 +47,35 @@
         <button>Shop now</button>
       </section>
 
+      <section id="features" class="section-p1">
+        <div class="f-box">
+          <img src="images/features/f1.png" alt="free shipping" />
+          <h6>Free shipping</h6>
+        </div>
+        <div class="f-box">
+          <img src="images/features/f2.png" alt="online order" />
+          <h6>online order</h6>
+        </div>
+        <div class="f-box">
+          <img src="images/features/f3.png" alt="save money" />
+          <h6>save money</h6>
+        </div>
+        <div class="f-box">
+          <img src="images/features/f4.png" alt="promotions" />
+          <h6>promotions</h6>
+        </div>
+        <div class="f-box">
+          <img src="images/features/f5.png" alt="happy sell" />
+          <h6>happy sell</h6>
+        </div>
+        <div class="f-box">
+          <img src="images/features/f6.png" alt="24/7 support" />
+          <h6>24/7 support</h6>
+        </div>
+      </section>
+
       <section class="product-section" class="section-p1">
-        <h1>Our Products</h1>
+        <h1>Featured Products</h1>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-collection">
           <div class="product-cart">
