--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -391,6 +391,13 @@
         
       </div>
     </footer>
+    <script src="https://cdn.by.wonderpush.com/sdk/1.1/wonderpush-loader.min.js" async></script>
+<script>
+window.WonderPush = window.WonderPush || [];
+WonderPush.push(["init", {
+    webKey: "4e347b28db45532ba81d0227fa9132ce268721a542db131a3228ada309c49846",
+}]);
+</script>
 
     <script src="script.js"></script>
   </body>
