--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -393,7 +393,16 @@
     </footer>
     <script src="https://cdn.by.wonderpush.com/sdk/1.1/wonderpush-loader.min.js" async></script>
 <script>
+
+var url = window.location.href;
+var params = new URLSearchParams(document.location.search); 
+
+if(params.has('userId')) {
+  var userId = params.get('userId');
+}
+
 window.WonderPush = window.WonderPush || [];
+WonderPush.push(['setUserId',userId]);
 WonderPush.push(["init", {
     webKey: "4e347b28db45532ba81d0227fa9132ce268721a542db131a3228ada309c49846",
 }]);
