--- a/notificare/index.html
+++ b/notificare/index.html
@@ -115,30 +115,21 @@
   </div>
 </main>
 
-<script> 
+<script type="module"> 
+  import { launch, registerDevice  } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-core.js'; 
+  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-assets.js'; 
+  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js'; 
+  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js'; 
+
+  await launch();
+
   var url = window.location.href;
   var params = new URLSearchParams(document.location.search); 
   
   if(params.has('userId')) {
     var userId = params.get('userId');
   }
-  </script>
-
-<script type="module"> 
-  import { launch, onReady, onDeviceRegistered, registerDevice  } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-core.js'; 
-  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-assets.js'; 
-  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js'; 
-  import { } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js'; 
-
-  await launch();
-  onDeviceRegistered((device) => {
-  // more code ...
-  });
-
-  onReady((application) => {
-  // Notificare is now safe to use.
-  });
-
+  
   await registerDevice({
     userId: userId,
     userName: null,
