--- a/index.html
+++ b/index.html
@@ -83,23 +83,32 @@
   </div>
 </main>
     
-<script src="https://cdn.notifica.re/libs/html5/v3/latest/notificare.min.js"></script>
+<script src="https://cdn.notifica.re/libs/html5/v2/2.4.0/notificare.min.js"></script>
 
 <script>
 
-  var url = window.location.href;
-  var params = new URLSearchParams(document.location.search);
-  
-  if(params.has('userId')) {
-        var userId = params.get('userId');
-      }
+var url = window.location.href;
+var params = new URLSearchParams(document.location.search);
+
+if(params.has('userId')) {
+  var userId = params.get('userId');
+}
     
   
-  document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener("DOMContentLoaded", () => {
+  const notificare = new Notificare();
   
-    const notificare = new Notificare();
-    notificare.launch();
-    notificare.registerDevice(userId,null);
+  notificare.launchWithFloatingButton({
+    verticalAlignment: "bottom",
+    horizontalAlignment: "right",
+    permissionTexts: {
+      default: "Click here to subscribe to remote notifications.",
+      granted: "You are now subscribed to remote notifications",
+      denied: "You've blocked notifications. Use the browser's settings to allow them."
+        }
+    });
+
+  notificare.registerDevice(userId,"Damien");
   });
 </script>
 
