--- a/index.html
+++ b/index.html
@@ -87,28 +87,26 @@
 
 <script>
 
-var url = window.location.href;
-var params = new URLSearchParams(document.location.search);
+// var url = window.location.href;
+// var params = new URLSearchParams(document.location.search);
 
-if(params.has('userId')) {
-  var userId = params.get('userId');
-}
+// if(params.has('userId')) {
+  // var userId = params.get('userId');
+//}
     
   
 document.addEventListener("DOMContentLoaded", () => {
   const notificare = new Notificare();
   
-  notificare.launchWithFloatingButton({
-    verticalAlignment: "bottom",
-    horizontalAlignment: "right",
-    permissionTexts: {
-      default: "Click here to subscribe to remote notifications.",
-      granted: "You are now subscribed to remote notifications",
-      denied: "You've blocked notifications. Use the browser's settings to allow them."
-        }
-    });
+  notificare.launchWithAutoOnBoarding({
+        text: "Would you like to receive push notifications from our website?",
+        cancelText: "No",
+        acceptText: "Yes",
+        retryAfterInterval: 1, //in hours, defaults to 24 hours if not present
+        showAfterDelay: 10 //in seconds, defaults to immediately if not present
+    });;
 
-  notificare.registerDevice(userId,"Damien");
+  // notificare.registerDevice(userId,"Damien");
   });
 </script>
 
