--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/jumbotron/">
 
-<!-- Notificare core CSS
-    <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/latest/notificare-push.css" /> 
-    <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.css" />
- -->
+<!-- Notificare core CSS -->
+  <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-in-app-messaging.css">
+  <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push.css">
+  <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push-ui.css">
+
     <!-- Bootstrap core CSS -->
 
 
@@ -85,29 +86,13 @@
     
 <script src="https://cdn.notifica.re/libs/html5/v2/2.4.0/notificare.min.js"></script>
 
-<script>
+<script type="module">
+  import { launch } from 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-core.js';
+  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-in-app-messaging.js';
+  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push.js';
+  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push-ui.js';
 
-// var url = window.location.href;
-// var params = new URLSearchParams(document.location.search);
-
-// if(params.has('userId')) {
-  // var userId = params.get('userId');
-//}
-    
-  
-document.addEventListener("DOMContentLoaded", () => {
-  const notificare = new Notificare();
-  
-  notificare.launchWithAutoOnBoarding({
-        text: "Would you like to receive push notifications from our website?",
-        cancelText: "No",
-        acceptText: "Yes",
-        retryAfterInterval: 1, //in hours, defaults to 24 hours if not present
-        showAfterDelay: 10 //in seconds, defaults to immediately if not present
-    });;
-
-  // notificare.registerDevice(userId,"Damien");
-  });
+  launch();
 </script>
 
   </body>
