--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/jumbotron/">
 
-<!-- Notificare core CSS -->
+  <!-- Notificare core CSS -->
   <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-in-app-messaging.css">
   <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push.css">
   <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push-ui.css">
@@ -87,12 +87,27 @@
 <script src="https://cdn.notifica.re/libs/html5/v2/2.4.0/notificare.min.js"></script>
 
 <script type="module">
-  import { launch } from 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-core.js';
+  import { launch,registerDevice } from 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-core.js';
   import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-in-app-messaging.js';
   import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push-ui.js';
 
   launch();
+
+  // Get the userId on the path of the url
+  var url = window.location.href;
+  var params = new URLSearchParams(document.location.search); 
+
+  if(params.has('userId')) {
+    var userId = params.get('userId');
+  }
+
+  // Link a userId to the device
+  registerDevice({
+  userId: userId,
+  userName: null,
+});
+
 </script>
 
   </body>
