--- a/index.html
+++ b/index.html
@@ -84,13 +84,11 @@
   </div>
 </main>
     
-<script src="https://cdn.notifica.re/libs/html5/v2/2.4.0/notificare.min.js"></script>
-
 <script type="module">
-  import { launch,registerDevice } from 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-core.js';
-  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-in-app-messaging.js';
-  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push.js';
-  import 'https://cdn.notifica.re/libs/web/v3/3.0.0/notificare-push-ui.js';
+  import { launch,registerDevice } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-core.js';
+  import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-in-app-messaging.js';
+  import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-push.js';
+  import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-push-ui.js';
 
   launch();
 
