--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-in-app-messaging.js';
   import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/web/v3/latest/notificare-push-ui.js';
+  import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-inbox.js';
 
   launch();
 
