--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
     </footer>
   </div>
 </main>
+
+<script type="text/javascript">
+  var globalThis._actGoal = {'settings':{'value':'/g/encrypted/goal/txSgBAH7u5l5vCnRgwHyzZZfxW5NA0yB3xKQgrAygWE', 'type' : 'WEBSITE_VISIT','goalUrl':'https://www.actito.be:443/actg'}};
+  (function() {
+     var _head = document.head || document.getElementsByTagName("head")[0];
+      var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
+      sp.src = ('https:' == document.location.protocol ? 'https://cdn.actito.be' : 'http://cdn.actito.be') + '/legacy/actito-goal/goal.js';
+      _head.appendChild(sp);
+  })();
+  </script>
     
 <script type="module">
   import { launch,registerDevice,updateUserData } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-core.js';
