--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
     
 <script type="module">
   import { launch,registerDevice,updateUserData } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-core.js';
-  import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-in-app-messaging.js';
-  import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js';
+  import { enableRemoteNotifications, disableRemoteNotifications} from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-inbox.js';
 
