--- a/customersignals/products-page.html
+++ b/customersignals/products-page.html
@@ -170,8 +170,8 @@
 
 <script>
 
-  //var url = window.location.href;
-  //var params = new URLSearchParams(document.location.search); 
+  var url = window.location.href;
+  var params = new URLSearchParams(document.location.search); 
   
   
   //async function digestUserId(str) {
@@ -180,14 +180,14 @@
     //console.log(hashUserId);
    //}
   
-  //if(params.has('userId')) {
-    //var userId = params.get('userId');
-    //digestUserId(userId);
-    //raptor.push("setRuid",hashUserId);
-  //} //else if (params.has('emailAddress')) {
-    //var userId = params.get('emailAddress');
-    //raptor.push("setRuid",userId);
-  //}  
+  if(params.has('userId')) {
+    var userId = params.get('userId');
+    digestUserId(userId);
+    raptor.push("setRuid",hashUserId);
+  } else if (params.has('emailAddress')) {
+    var userId = params.get('emailAddress');
+    raptor.push("setRuid",userId);
+  }  
       
   
   //when the user click on button
