--- a/customersignals/products-page.html
+++ b/customersignals/products-page.html
@@ -193,7 +193,7 @@
   //when the user click on button
   function triggerViewProduct(productId) {
     console.log(productId); 
-    raptor.push("trackEvent", { p1:"visit", p2:productId,p3:"{ProductName}",p4:"{CategoryPath}" });
+    raptor.push("trackEvent", { p1:"visit", p2:productId,p3:"Pull",p4:"10#Outerwear;11#Jackets;12#Winthercoats" });
   }
   </script>
 
