--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
   userId: userId
 });
 
-  await updateUserData({
-  pushId: userId
-});
+  //await updateUserData({
+  //pushId: userId
+//});
 
 </script>
 
