--- a/customersignals/checkout-page.html
+++ b/customersignals/checkout-page.html
@@ -132,7 +132,15 @@
   </div>
 </main>
 
-
+<script type="text/javascript">
+var globalThis._actGoal = {'settings':{'value':'/g/encrypted/goal/txSgBAH7u5l5vCnRgwHyzcJ6exvV1_Lb3xKQgrAygWE', 'type' : 'WEBSITE_VISIT','goalUrl':'https://www3.actito.com:443/actg'}};
+(function() {
+	 var _head = document.head || document.getElementsByTagName("head")[0];
+    var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
+    sp.src = ('https:' == document.location.protocol ? 'https://cdn3.actito.com' : 'http://cdn3.actito.com') + '/legacy/actito-goal/goal.js';
+    _head.appendChild(sp);
+})();
+</script>
 <script>
 
 var url = window.location.href;
