--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 const { items, count, unread } = await fetchInbox();
 const notification = await openInboxItem(item);
 
-await presentNotification(notification);
+presentNotification(notification);
   
 </script>
 
